# xar

./: .dockerignore  .env.example  .gitignore  .wd2_commit_msg.txt  .wd_commit_msg.txt  ANDY_UPSTREAM.md  ARCHITECTURE_REVIEW.md  CODE_REVIEW.md  DESIGN.md  Dockerfile  EARNINGS_TRADING_PLAN.md  FENNY_UPSTREAM.md  LOCAL_LLM_PLAN.md  ONTOLOGY_REVIEW.md  README.md  RESEARCH_DOCS_PLAN.md  SEMANTIC_DB_PLAN.md  SHOWCASE.md  THESIS_ONTOLOGY_PLAN.md  UI.md  UNIFIED_ARCH_PLAN.md  WECHAT_DISCOVERY_PLAN.md  WECHAT_DISCOVERY_REVIEW.md  docker-compose.yml  pyproject.toml  ultraplan.md
.github/workflows/: ci.yml
docs/futu/: futu_universe_candidates.py
scripts/: bench_local_llm.py  check_licenses.py  futu_universe_gen.py  ontology_enrich.py  universe_build.py  wechat_discover_check.py  wechat_discover_race.py
src/fcn/: __init__.py  envtools.py
src/slx/: __init__.py  db.py  schema.sql
src/xar/: __init__.py  cli.py  config.py  logging.py  pipeline_priority.py
tests/: conftest.py  test_agentsdk.py  test_aifinmarket.py  test_alphapai.py  test_alt_bindings.py  test_altdata.py  test_andy.py  test_ats_jobs.py  test_capabilities.py  test_capability_runs.py  test_chathy.py  test_chathy_capabilities.py  test_chathy_telegram.py  test_cn_parity.py  test_cn_routing.py  test_codex.py  test_dataroom.py  test_dynamic_routing.py  test_earnings_dossier.py  test_earnings_ontology.py  test_earnings_outcomes.py  test_earnings_pipeline.py  test_earnings_verdict.py  test_edgar_deep.py  test_evidence_link.py  test_fetch_chain.py  test_fetchy.py  test_flow.py  test_futu.py  test_gangtise.py  test_gangtise_insight.py  test_gangtise_planner.py  test_github_metrics.py  test_glm_worker.py  test_history.py  test_implied_move.py  test_indicators.py  test_kr_exports.py  test_macro_bridge.py  test_macro_links.py  (+25 more)
tests/andy/: conftest.py  test_connector_discovery.py  test_identification.py  test_integrity.py  test_notify.py  test_overclaim_db.py  test_overclaim_engine.py  test_point_in_time.py
tests/fenny/: test_api.py  test_blotter.py  test_finder_mc.py  test_finnhub.py  test_fmp_provider.py  test_greeks.py  test_invariants.py  test_live_provider.py  test_market_read.py  test_market_resolver.py  test_massive_provider.py  test_options_advisor.py  test_options_analytics.py  test_options_api.py  test_options_chain.py  test_options_greeks.py  test_ranking.py  (+9 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+393 files in other folders)
